randomized endpoint cert pool (#27488)
* randomized endpoint cert pool

* test name format

* recordify EndpointCertificateMetadata

* save randomized id to cert

* assigned randomized endpoint cert to app when flag is set

* remove assigned certs from ready pool

* skip validation of SANs for randomized certs

* remove unused clock

* reminder to assign randomized certs at application level

* remove getters, move comments to record constructor

* camel case field name

* CertPoolMaintainer -> CertificatePoolMaintainer

* fix enum names

* randomIdentifier -> generateRandomId

* Wire maintainer

* Add PooledCertificateSerializer

* Use PooledCertificate

* Remove unused enum

* exclude all cert pool ids from cleanup

* don't set randomizedId in mock

* use SecureRandom for id generation

* fix NodesV2ApiTest

* add cert request method without applicationId

* remove unused import

* assert on generated key names, remove unused clock

* remove unused import

* don't use : in ckms prefix!

* entirely remove application id from cert provider interface

* use correct key prefix in handler too

* Assign certificate to application from pool

* PooledCertificate -> UnassignedCertificate

* Read/write AssignedCertificate everywhere

---------

Co-authored-by: Martin Polden <mpolden@mpolden.no>