@@ -1,9 +1,6 @@
 // Copyright Yahoo. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.vespa.hosted.controller.api.integration.certificates;
 
-import com.yahoo.config.provision.ApplicationId;
-
-import java.time.Clock;
 import java.time.Instant;
 import java.util.Collections;
 import java.util.HashMap;
@@ -11,7 +8,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 /**
  * @author tokle
@@ -19,29 +15,23 @@ import java.util.stream.Collectors;
  */
 public class EndpointCertificateMock implements EndpointCertificateProvider {
 
-    private final Map<ApplicationId, List<String>> dnsNames = new HashMap<>();
+    private final Map<String, List<String>> dnsNames = new HashMap<>();
     private final Map<String, EndpointCertificateMetadata> providerMetadata = new HashMap<>();
-    private final Clock clock;
 
-    public EndpointCertificateMock(Clock clock) {
-        this.clock = clock;
-    }
-
-    public List<String> dnsNamesOf(ApplicationId application) {
-        return Collections.unmodifiableList(dnsNames.getOrDefault(application, List.of()));
+    public List<String> dnsNamesOf(String rootRequestId) {
+        return Collections.unmodifiableList(dnsNames.getOrDefault(rootRequestId, List.of()));
     }
 
     @Override
-    public EndpointCertificateMetadata requestCaSignedCertificate(ApplicationId applicationId, List<String> dnsNames, Optional<EndpointCertificateMetadata> currentMetadata) {
-        this.dnsNames.put(applicationId, dnsNames);
-        String endpointCertificatePrefix = String.format("vespa.tls.%s.%s.%s", applicationId.tenant(),
-                applicationId.application(), applicationId.instance());
+    public EndpointCertificateMetadata requestCaSignedCertificate(String key, List<String> dnsNames, Optional<EndpointCertificateMetadata> currentMetadata, String algo, boolean useAlternativeProvider) {
+        String endpointCertificatePrefix = "vespa.tls.%s".formatted(key);
         long epochSecond = Instant.now().getEpochSecond();
         long inAnHour = epochSecond + 3600;
         String requestId = UUID.randomUUID().toString();
+        this.dnsNames.put(requestId, dnsNames);
         int version = currentMetadata.map(c -> currentMetadata.get().version()+1).orElse(0);
         EndpointCertificateMetadata metadata = new EndpointCertificateMetadata(endpointCertificatePrefix + "-key", endpointCertificatePrefix + "-cert", version, 0,
-                currentMetadata.map(EndpointCertificateMetadata::rootRequestId).orElse(requestId), Optional.of(requestId), dnsNames, "mockCa", Optional.of(inAnHour), Optional.of(epochSecond));
+                currentMetadata.map(EndpointCertificateMetadata::rootRequestId).orElse(requestId), Optional.of(requestId), dnsNames, "mockCa", Optional.of(inAnHour), Optional.of(epochSecond), Optional.empty());
         currentMetadata.ifPresent(c -> providerMetadata.remove(c.leafRequestId().orElseThrow()));
         providerMetadata.put(requestId, metadata);
         return metadata;
@@ -70,8 +60,8 @@ public class EndpointCertificateMock implements EndpointCertificateProvider {
     }
 
     @Override
-    public void deleteCertificate(ApplicationId applicationId, String requestId) {
-        dnsNames.remove(applicationId);
+    public void deleteCertificate(String requestId) {
+        dnsNames.remove(requestId);
         providerMetadata.remove(requestId);
     }
 
